fixed questions alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ body, html {
 .container{
     height: 90%;
     background-color: navy;
-    opacity: 0.5;
+    opacity: 0.8;
     background-size: cover;
     
     color: aliceblue;
@@ -104,21 +104,22 @@ header {
 }
 
 .questions {
-    font-size: 15px;
-    padding-top: 0%;
+    font-size: 16px;
+    margin: 0%;
+    padding: 0%;
     text-align: center;
     color: coral;
     opacity: 1;
-    float: right;
+    float: left;
     
 }
 #questions2{
-    clear: right;
-    float: left;
-    font-size: 15px;
+    clear: left;
+    float: right;
+    font-size: 16px;
     opacity: 1;
     margin: 0%;
-    padding-top: 0%;
+    padding: 0%;
     text-align: center;
     color: coral;
 }
